# 3b30yee

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  install.bat  install.sh  release.sh  test-basic.sh
.github/workflows/: build.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TB303Envelope.cpp  TB303Envelope.h  TB303Filter.cpp  TB303Filter.h  TB303Synth.cpp  TB303Synth.h  TB303Voice.cpp  TB303Voice.h
Tests/: CMakeLists.txt  FilterTests.cpp  ProcessorTests.cpp  TestMain.cpp  VoiceTests.cpp
